Fix floating numbers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main>
   <aside>
     <section id="score">
-      <label>Score</label><span [innerText]="player.score"></span>
+      <label>Score: </label><span [innerText]="player.score"></span>
     </section>
     <section id="arena">
       <div class="row" *ngFor="let row of arena; let x = index">
